<resources>
    <string name="about_application">About application</string>
    <string name="accuracy">Accuracy</string>
    <string name="altitude">Altitude</string>
    <string name="answer">Answer</string>
    <string name="author">Author</string>
    <string name="azimuth">Azimuth</string>
    <string name="cancel">Cancel</string>
    <string name="choose_cartridge">Choose Cartridge</string>
    <string name="close">Close</string>
    <string name="declination">Declination</string>
    <string name="disable_location">Disable location</string>
    <string name="distance">Distance</string>
    <string name="do_you_really_want_to_delete_selected_items">Do you really want to delete selected items?</string>
    <string name="do_you_really_want_to_delete_x">"Do you really want to delete '%1$s'?"</string>
    <string name="do_you_really_want_to_exit">Do you really want to EXIT?</string>
    <string name="dont_ask">"Don't ask"</string>
    <string name="error">Error</string>
    <string name="failed">Failed</string>
    <string name="feet">Feet</string>
    <string name="filesystem_cannot_create_root">"Cannot create Root directory, SDCard probably missing.

Insert it into device and run again!"</string>
    <string name="finished">Finished</string>
    <string name="gps">Location</string>
    <string name="gps_and_location">GPS and location</string>
    <string name="gps_disabled">Location disabled</string>
    <string name="gps_enabled">Location enabled</string>
    <string name="gps_fix">Last GPS fix</string>
    <string name="gps_not_enabled_show_system_settings">Location service not enabled. Would you like to show system settings?</string>
    <string name="gps_off">Location</string>
    <string name="gps_on">Location</string>
    <string name="info">Information</string>
    <string name="invalid_cartridge">"Invalid cartridge

 %s"</string>
    <string name="invalid_value">Invalid value</string>
    <string name="inventory">Inventory</string>
    <string name="latitude">Latitude</string>
    <string name="libraries">Libraries</string>
    <string name="locations">Locations</string>
    <string name="longitude">Longitude</string>
    <string name="map">Map</string>
    <string name="metres">Metres</string>
    <string name="new_version_will_be_installed">New version will be installed!</string>
    <string name="no">No</string>
    <string name="no_description">No description</string>
    <string name="no_location_providers_available">No Location providers available!</string>
    <string name="no_satellites">No satellites</string>
    <string name="no_target">No target!</string>
    <string name="not_enough_disk_space_x">"Not enough free disk space on SDCard!
(%1$s, free:%2$s)"</string>
    <string name="ok">OK</string>
    <string name="pending">Pending</string>
    <string name="pitch">Pitch</string>
    <string name="point">Point</string>
    <string name="pref_advanced_settings">Advanced settings</string>
    <string name="pref_bearing_true">Use true bearing</string>
    <string name="pref_bearing_true_desc">If enabled use true bearing. Otherwise use magnetic bearing</string>
    <string name="pref_confirm_on_exit">Confirm on exiting</string>
    <string name="pref_confirm_on_exit_desc">Display confirmation dialog before exiting Locus via the Back Button</string>
    <string name="pref_fullscreen">FullScreen</string>
    <string name="pref_fullscreen_desc">Hide system panel</string>
    <string name="pref_global">Global</string>
    <string name="pref_gps_altitude_manual_correction">Adjust Altitude</string>
    <string name="pref_gps_altitude_manual_correction_desc">Manual correction of Altitude</string>
    <string name="pref_gps_beep_on_gps_fix">Beep on GPS fix</string>
    <string name="pref_gps_beep_on_gps_fix_desc">Beep when GPS receive first valid fixed position</string>
    <string name="pref_gps_disable">Disable when hidden</string>
    <string name="pref_gps_disable_desc">Disable GPS, when screen turn off or application is minimized and GPS is not required by any function</string>
    <string name="pref_gps_min_time">Time between GPS locations</string>
    <string name="pref_gps_min_time_desc">Time (in sec) between GPS try to get new location. To conserve battery, suggest values more then 60s</string>
    <string name="pref_guiding">Guiding</string>
    <string name="pref_guiding_compass_sounds">Guiding sounds</string>
    <string name="pref_guiding_compass_sounds_desc">Enable/disable sounds during guiding</string>
    <string name="pref_guiding_gps_required_desc">Leave GPS on, when app is hidden during guiding</string>
    <string name="pref_guiding_sound_distance_waypoint_desc">Distance (metres) used in sounds. Start value for increasing or just a value for one beep</string>
    <string name="pref_guiding_sound_type">Type of sound notification</string>
    <string name="pref_guiding_sound_type_waypoint_desc">Here you can change way, how point notification sounds works</string>
    <string name="pref_guiding_waypoint_sound_beep_on_distance">Beep on distance</string>
    <string name="pref_guiding_waypoint_sound_custom_on_distance">Custom sound on distance</string>
    <string name="pref_guiding_waypoint_sound_increasing">Increase frequency when go closer</string>
    <string name="pref_highlight">Always screen on</string>
    <string name="pref_highlight_always_text">Always screen on</string>
    <string name="pref_highlight_desc">Enable/disable permanent screen on</string>
    <string name="pref_highlight_off_text">System settings</string>
    <string name="pref_highlight_only_gps_text">Only when GPS ON</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_default">Default system</string>
    <string name="pref_language_desc">Allow to set language from selection</string>
    <string name="pref_locale">Localization</string>
    <string name="pref_orientation">Orientation</string>
    <string name="pref_sensors">Sensors</string>
    <string name="pref_sensors_compass_auto_change">Auto change</string>
    <string name="pref_sensors_compass_auto_change_desc">Use source for bearing defined by Use hardware compass settings for low speed. For high speed use bearing from GPS</string>
    <string name="pref_sensors_compass_auto_change_value">Speed value</string>
    <string name="pref_sensors_compass_auto_change_value_desc">Value that define which source for bearing will be used (low speed below this value, high speed above this value)</string>
    <string name="pref_sensors_compass_hardware">Use hardware compass</string>
    <string name="pref_sensors_compass_hardware_desc">Use hardware compass for map rotation and compass screen. Bearing from GPS (better for car) will be used if disabled</string>
    <string name="pref_sensors_orient_filter">Orientation filter</string>
    <string name="pref_sensors_orient_filter_desc">Filter applied to orientation. Stronger filter cause slower reactions, but fluent movement</string>
    <string name="pref_sensors_orient_filter_heavy">Heavy filter</string>
    <string name="pref_sensors_orient_filter_ligth">Light filter</string>
    <string name="pref_sensors_orient_filter_medium">Medium filter</string>
    <string name="pref_sensors_orient_filter_no_filter">No filtration</string>
    <string name="pref_style_on_map">Style on map</string>
    <string name="pref_units">Units</string>
    <string name="pref_units_altitude">Altitude units</string>
    <string name="pref_units_altitude_desc">Distance units for height</string>
    <string name="pref_units_angle">Angle units</string>
    <string name="pref_units_angle_angular_mil">Angular mil</string>
    <string name="pref_units_angle_degree">Degree</string>
    <string name="pref_units_angle_desc">Angle units for display</string>
    <string name="pref_units_coo_latlon">Coordinates format</string>
    <string name="pref_units_coo_latlon_dec">14,94323°</string>
    <string name="pref_units_coo_latlon_desc">Coordinates (latitude/longitude) format for display</string>
    <string name="pref_units_coo_latlon_min">"14° 52.123'"</string>
    <string name="pref_units_coo_latlon_sec">"14° 52' 12.34''"</string>
    <string name="pref_units_length">Length units</string>
    <string name="pref_units_length_desc">Choose default display units</string>
    <string name="pref_units_speed">Speed units</string>
    <string name="pref_units_speed_desc">Choose default speed units</string>
    <string name="press_color_to_apply">Press color to apply</string>
    <string name="problem_with_internet_connection">Problem with Internet connection!</string>
    <string name="question">Question</string>
    <string name="resume_previous_cartridge">"Load savegame?
(If you choose No, the savegame will be deleted.)"</string>
    <string name="roll">Roll</string>
    <string name="satellites">Satellites</string>
    <string name="save_game_before_exit">Save game before exit?</string>
    <string name="settings">Settings</string>
    <string name="speed">Speed</string>
    <string name="start">Start</string>
    <string name="tasks">Tasks</string>
    <string name="time_to_target">Time to target</string>
    <string name="unexpected_problem">"Unexpected problem!

Please contact me with description of your problem."</string>
    <string name="version">Version</string>
    <string name="waypoints">Waypoints</string>
    <string name="web_page">Web page</string>
    <string name="working">Working…</string>
    <string name="yes">Yes</string>
    <string name="provider">Location provider</string>
    <string name="menu_preferences">Preferences</string>
    <string name="preferences_cache_persistence">Cache persistence</string>
    <string name="preferences_cache_persistence_desc">Keep cached images on exit</string>
    <string name="preferences_cache_size">External storage</string>
    <string name="preferences_cache_size_desc">Adjust the size of the cache</string>
    <string name="preferences_debug">Debug settings</string>
    <string name="preferences_fullscreen">Full screen mode</string>
    <string name="preferences_fullscreen_desc">Hide the status bar</string>
    <string name="preferences_general">General settings</string>
    <string name="preferences_map">Map settings</string>
    <string name="preferences_move_speed">Move speed</string>
    <string name="preferences_move_speed_desc">Adjust the move speed of the map</string>
    <string name="preferences_scale_bar_unit">Scale bar unit</string>
    <string name="preferences_scale_bar_unit_desc">Select the unit for the map scale bar</string>
    <string name="preferences_show_fps_counter">Frame rate</string>
    <string name="preferences_show_fps_counter_desc">Enable frames per second counter</string>
    <string name="preferences_show_scale_bar">Map scale bar</string>
    <string name="preferences_show_scale_bar_desc">Show the scale of the map</string>
    <string name="preferences_show_tile_coordinates">Tile coordinates</string>
    <string name="preferences_show_tile_coordinates_desc">Show coordinates on tiles</string>
    <string name="preferences_show_tile_frames">Tile boundaries</string>
    <string name="preferences_show_tile_frames_desc">Draw tile boundaries</string>
    <string name="preferences_show_water_tiles">Water tiles</string>
    <string name="preferences_show_water_tiles_desc">Highlight tiles which have the water flag set</string>
    <string name="preferences_text_scale">Font size</string>
    <string name="preferences_text_scale_desc">Select the text size of map labels</string>
    <string name="preferences_wake_lock">Stay awake</string>
    <string name="preferences_wake_lock_desc">Stop the screen from dimming</string>
    <string name="daidalos_cancel">Cancel</string>
    <string name="daidalos_new_file">New</string>
    <string name="daidalos_ok">OK</string>
    <string name="preferences_scale_bar_unit_default">metric</string>
    <string name="preferences_text_scale_default">1.0</string>
</resources>