<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/linearLayoutMain" android:background="@drawable/var_custom_screen_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/linearLayoutCompass" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="40.0dip" android:layout_above="@id/linearLayoutName" />
    <LinearLayout android:id="@id/linearLayoutTopCoordinates" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="left" android:id="@id/textViewLatitude" android:layout_width="wrap_content" style="@style/CustomScreenTextValue" />
        <TextView android:gravity="center_horizontal" android:id="@id/textViewProvider" android:layout_width="wrap_content" style="@style/CustomScreenTextTitle" />
        <TextView android:gravity="right" android:id="@id/textViewLongitude" android:layout_width="wrap_content" style="@style/CustomScreenTextValue" />
    </LinearLayout>
    <LinearLayout android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/linearLayoutTopCoordinates">
        <TextView android:gravity="left" android:layout_width="wrap_content" android:text="@string/latitude" style="@style/CustomScreenTextTitle" />
        <TextView android:gravity="center_horizontal" android:layout_width="wrap_content" android:text="@string/provider" style="@style/CustomScreenTextTitle" />
        <TextView android:gravity="right" android:layout_width="wrap_content" android:text="@string/longitude" style="@style/CustomScreenTextTitle" />
    </LinearLayout>
    <LinearLayout android:id="@id/linearLayoutName" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/linear_layout_bottom">
        <TextView android:gravity="center_horizontal" android:id="@id/textViewName" android:layout_width="0.0dip" android:text="" android:layout_weight="1.0" style="@style/CustomScreenTextValue" />
    </LinearLayout>
    <LinearLayout android:id="@id/linear_layout_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/linear_layout_bottom_2">
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/altitude" style="@style/CustomScreenTextTitle" />
            <TextView android:id="@id/textViewAltitude" style="@style/CustomScreenTextValue" />
        </LinearLayout>
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/speed" style="@style/CustomScreenTextTitle" />
            <TextView android:id="@id/textViewSpeed" style="@style/CustomScreenTextValue" />
        </LinearLayout>
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/accuracy" style="@style/CustomScreenTextTitle" />
            <TextView android:id="@id/textViewAccuracy" style="@style/CustomScreenTextValue" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/linear_layout_bottom_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout style="@style/CustomScreenBottomInfo">
            <TextView android:text="@string/time_to_target" style="@style/CustomScreenTextTitle" />
            <TextView android:id="@id/text_view_time_to_target" style="@style/CustomScreenTextValue" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>